--- a/index2.html
+++ b/index2.html
@@ -1,7 +1,62 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>CHISTES</title>
+<html lang="es">
+<head>
+  <meta charset="utf-8" />
+  <link rel="stylesheet" href="style.css">
+  <title>Chistes</title>
+</head>
 
-    
+<body>
+  <div class="inicio">
+  <h1 class="titulo1">C</h1>  
+  <h1 class="titulo2">H</h1>
+  <h1 class="titulo1">I</h1>
+  <h1 class="titulo2">S</h1>
+  <h1 class="titulo1">T</h1>
+  <h1 class="titulo2">E</h1>
+  <h1 class="titulo1">S</h1>
+</div> <br> <br>
+
+<div class="caja"><strong>Don Vito</strong> </div>
+<div class="dentrocaja"> 
+  <p class="papa"> Papá, en el colegio me llaman mafioso </p>
+
+  <p class="responde"> <img src="img/U1f621-cara-enfado.svg" width="30" height="30"> <img src="img/U1f621-cara-enfado.svg" width="30" height="30">
+    No te preocupes, ya iré a <br> hablar con el director</p>
+
+  <p class="papa"> Bueno, pero que parezca un accidente <img src="img/U1f607-cara-halo.svg" width="30" height="30"></p>
+</div>
+<br>
+<hr> <br>
+<div class="caja"><strong>Pepe</strong></div>
+<div class="dentrocaja">
+  <p class="responde">María, qué felices éramos hace 15 años... </p>
+
+  <p class="papa">Pero si no nos conocíamos...</p>
+
+  <p class="responde">Por eso María... por eso.</p>
+
+</div>
+<br>
+<hr> <br>
+<div class="caja"> <img src="img/mama.png" width="30" height="30"> <strong> Mamá ... y otras cosas </strong></div>
+<div class="dentrocaja">
+
+<p class="papa"> Mamá, mamá, en el colegio me dicen que estoy loco. </p>
+
+<p class="responde"> ¿Quién, hijo, quién?</p>
+
+<p class="papa">Las ardillas, mamá, las malditas ardillas…</p>
+
+</div>
+<br>
+<hr> <br>
+<div class="caja"><strong> María</strong></div>
+<div class="dentrocaja">
+
+  <p class="papa"> María, si te tocaran cien millones con la quiniela, ¿me dejarías de querer? &#x1F914;
+  </p>
+  <p class="responde">No, mi vida. Pero te echaría mucho de menos. &#x1F6EB;</p>
+
+</body>
+</html>
